--- a/docs/include/nidm-experiment_head.html
+++ b/docs/include/nidm-experiment_head.html
@@ -1,115 +1,7 @@
-<!DOCTYPE html>
-<html>
+--- layout: default ---
 <head>
     <title>NIDM-Experiment (under development)</title>
     <meta charset='utf-8'>
-    <script src='stylesheet/respec-w3c-common.js' async class='remove'></script>
-    <link href="./stylesheet/nidm-w3c-unofficial.css" rel="stylesheet" type="text/css">
-    <script class='remove'>
-        var respecConfig = {
-            specStatus: "unofficial",
-            shortName: "nidm-p",
-            overrideCopyright: "<p class=copyright>NIDM © Free To Everyone!</p>",
-            editors: [
-                {   name: "Karl Helmer",
-                    company: "Athinoula A. Martinos Center for Biomedical Imaging, Massachusetts General Hospital",
-                    companyURL: "https://www.nmr.mgh.harvard.edu/" },
-                {   name: "Camille Maumet",
-                    company: "Inria",
-	            companyURL: "https://www.inria.fr/en/"}
-            ],
-            otherLinks: [
-                {
-                key: "Contributors",
-                data: []
-                }, {
-                key: "This version",
-                data: [{
-                      value: "http://nidm.nidash.org/specs/nidm-experiment_dev.html",
-                      href: "./nidm-experiment_dev.html"
-                      }]
-                }, {
-                key: "Latest published version",
-                data: [{
-                      value: "http://nidm.nidash.org/specs/nidm-experiment.html",
-                      href: "./nidm-experiment.html"
-                      }]
-                }, {
-                key: "Latest development version",
-                data: [{
-                      value: "http://nidm.nidash.org/specs/nidm-experiment_dev.html",
-                      href: "./nidm-experiment_dev.html"
-                      }]
-                }, {
-                key: "Previous version",
-                data: [{
-                      value: "http://nidm.nidash.org/specs/nidm-experiment_dev.html",
-                      href: "./nidm-experiment_dev.html"
-                      }]                            
-                }
-            ],
-			logos: [
-			   {
-			      src: 'stylesheet/nidm-text.png',
-			      url: "http://nidm.nidash.org",
-			      alt: "NIDM",
-			      width: 100,
-			      height: 50,
-			      id: 'logo-NIDM-WD'
-			   }
-			],
-            previousMaturity: "FPWD",
-            previousPublishDate: "2013-12-10",
-            wg: "NIDASH Working Group",
-			wgURI:        "http://nidm.nidash.org",
-			wgPublicList: "nidm-users@googlegroups.com",
-			wgPatentURI:  "http://nidm.nidash.org",
-            afterEnd: function () {
-
-                var currentDate = new Date();
-                var date = currentDate.toString('dddd, MMMM ,yyyy');
-                $("#respecHeader h2").text("NIDM Specification " + date);
-                $("#respecHeader img").attr({ src: "./stylesheet/nidm-text.png", width: 100, height: 50 });
-            },
-            localBiblio: {
-                "KEATORNI13": {
-                    title: "Towards structured sharing of raw and derived neuroimaging data across existing resources",
-                    href: "http://www.sciencedirect.com/science/article/pii/S105381191300596X",
-                    authors: [
-                        "David B. Keator"
-                        , "Karl Helmer"
-                        , "Jason Steffener"
-                        , "Jessica A. Turner"
-                        , "Theodorus G.M. VanErp"
-                        , "Syam Gadde"
-                        , "Naveen Ashish"
-                        , "Gully A. Burns"
-                        , "B. Nolan Nichols"
-                    ], publisher: "	Elsevier"
-                },
-                "NIDM-Overview": {
-                    title: "NIDM Overview",
-                    href:  "./nidm-overview.html"
-                },
-                "NIDM-Primer": {
-                    title: "NIDM Primer",
-                    href:  "./nidm-primer.html"
-                },
-                "NIDM-Descriptor": {
-                    title: "NIDM Descriptor",
-                    href:  "./nidm-descriptor.html"
-                },
-                "NIDM-Experiment": {
-                    title: "NIDM Experiment",
-                    href:  "./nidm-experiment.html"
-                },
-                "NIDM-Results": {
-                    title: "NIDM Results",
-                    href:  "./nidm-results.html"
-                }
-            }
-        };
-    </script>
 </head>
 <body>
     <section id='abstract'>
