layout default adjust

--- a/docs/include/nidm-experiment_head.html
+++ b/docs/include/nidm-experiment_head.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default
+---
     <section id='abstract'>
         <p>
             This document provides an intuitive introduction to the NIDASH Data Model for neuroimaging data
