--- a/docs/include/head3.html
+++ b/docs/include/head3.html
@@ -1,5 +1,6 @@
     <a href="index.html" class="btn">NIDM</a>
     <a href="bids.html" class="btn">BIDS</a>
+    <a href="dicom.html" class="btn">DICOM</a>
     <a href="https://github.com/wolfborg/nidm" class="btn">View on GitHub</a>
   </section>
 
