Internal linking, SIO, and OBO

--- a/docs/include/head3.html
+++ b/docs/include/head3.html
@@ -1,6 +1,8 @@
-    <a href="index.html" class="btn">NIDM</a>
+    <a href="index.html" class="btn">NIDM-E</a>
     <a href="bids.html" class="btn">BIDS</a>
     <a href="dicom.html" class="btn">DICOM</a>
+    <a href="sio.html" class="btn">SIO</a>
+    <a href="obo.html" class="btn">OBO</a>
     <a href="https://github.com/wolfborg/nidm" class="btn">View on GitHub</a>
   </section>
 
