--- a/docs/include/head3.html
+++ b/docs/include/head3.html
@@ -3,6 +3,7 @@
     <a href="dicom.html" class="btn">DICOM</a>
     <a href="sio.html" class="btn">SIO</a>
     <a href="obo.html" class="btn">OBO</a>
+    <a href="onli.html" class="btn">ONLI</a>
     <a href="https://github.com/wolfborg/nidm" class="btn">View on GitHub</a>
   </section>
 
