removed old intro tags

--- a/docs/include/intro.html
+++ b/docs/include/intro.html
@@ -33,16 +33,16 @@
                     NIDASH Model Specificatin Suite (this document);
                 </li>
                 <li><a href="http://nidm.nidash.org/specs/nidm-primer.html">NIDM-PRIMER</a> (Draft), a primer for the NIDASH
-                    data model [[!NIDM-Primer]];
+                    data model;
                 </li>
                 <li><a href="http://nidm.nidash.org/specs/nidm-descriptor.html">NIDM-DESCRIPTOR</a> (Draft), the NIDM Dataset
-                    Descriptor is a high level description of neuroimaging data modeled using NIDM [[!NIDM-Descriptor]];
+                    Descriptor is a high level description of neuroimaging data modeled using NIDM;
                 </li>
                 <li><a href="http://nidm.nidash.org/specs/nidm-experiment.html">NIDM-EXPERIMENT</a> (Draft), a data model for
-                    describing the organization of raw neuroimaging experiment data [[!NIDM-Experiment]];
+                    describing the organization of raw neuroimaging experiment data;
                 </li>
                 <li><a href="http://nidm.nidash.org/specs/nidm-results.html">NIDM-RESULTS</a> (Draft), a data model for
-                    describing the results of neuroimaging analyses.[[!NIDM-Results]].
+                    describing the results of neuroimaging analyses.
                 </li>
             </ul>
         </section>
